              now check their preconditions and throw an exception if they fail.
        Class Face<dim, dim-1>:
            - New routines lock(), unlock(), and isLocked().
        Class FacetPairing<dim>:
            - New routine hash(), which uses the tight encoding.
        Class FacetSpec<dim>:
            - New routine hash(), which uses the tight encoding.
        Class Integer:
            - New routine hash(), which hashes the integer down to a size_t.
        Class Isomorphism<dim>:
            - New routine hash(), which uses the tight encoding.
        Class LargeInteger:
            - New routine hash(), which hashes the integer down to a size_t.
        Class Laurent<T>, Laurent2<T>:
            - New routine hash(), which uses the tight encoding.
        Class Link:
            - New routine hash(), which uses the tight encoding.
            - Fixed a bug where calling resolve() would not clear out any
              cached link polynomials that had already been computed.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
            - Optimised so that computed topological properties (e.g., Jones
              and HOMFLY-PT polynomials) are preserved through operations that
              do not change the topology (e.g., Reidemeister moves).
        Class LockViolation:
            - New exception class used when the user attempts to change a
              locked simplex or facet.
        Class Packet:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear
              that this only matters for objects held by packets.  The old
              name is kept as a deprecated alias.
            - New inner type alias PacketChangeGroup, to assist with readability
              when using a ChangeEventSpan for optimisation purposes only.
        Class PacketData<Held>:
            - Renamed ChangeEventSpan to PacketChangeSpan, to make it clear